Revert "option to directly submit to queue"

--- a/runxtb.rc
+++ b/runxtb.rc
@@ -1,41 +1,21 @@
 # Example .runxtbrc
-
-## Set default processes (= number of available cores)
-#
-   OMP_NUM_THREADS=4
-   MKL_NUM_THREADS=4
-
-## Set default memory to be used
-#
-   OMP_STACKSIZE=1000m
-
-## Set directory (not including the executable)
-#
-#  XTBHOME=/path/to/xtb
-#
-## Set the name of the executable
-#
-#  xtb_callname="xtb"
-#
-## The above two lines should combined give the full path to the program
-##
-## XTBHOME/xtb_callname
-
-## Set chattyness 
-## (0: all; 1: no info; 2: no warnings; >2: nothing)
-#
-   stay_quiet=0
-
-## Trap output of xtb in (default filename)
-#
-#  output_file="runxtb.out"
-
-## Set default mode 
-## (yes: interactive; no: write script; sub: write and submit)
-#
+# Set default processes
+OMP_NUM_THREADS=4
+MKL_NUM_THREADS=4
+#Set default memory
+OMP_STACKSIZE=1000m
+# Set directory
+#XTBHOME=/path/to/xtb
+# Set the name of the executable
+#xtb_callname="xtb"
+# The above two lines should combined give the full path to the program
+#  XTBHOME/xtb_callname
+# Set chattyness (0: all; 1: no info; 2: no warnings; >2: nothing)
+stay_quiet=0
+# Trap output of xtb in
+#output_file="runxtb.out"
+# Set default mode
 run_interactive="yes"
-
-## Set Walltime for non-interactive mode
-#
-#  requested_walltime="24:00:00"
+# Set Walltime
+#requested_walltime="24:00:00"
 
