--- a/runxtb.rc
+++ b/runxtb.rc
@@ -45,6 +45,16 @@
 #
    bsub_rwth_project="default"
 
+## If modules are installed, their use can be enabled here.
+## The default is setting the path, see above.
+#
+#  use_modules="true"
+#
+#  They need to be named, too. For example:
+#
+#  load_modules[0]="CHEMISTRY"
+#  load_modules[1]="xtb"
+
 ## Set Walltime for non-interactive mode
 #
 #  requested_walltime="24:00:00"
