Bugfix: Added missing 'fatal' function to configure script Bugfix: Added initilising of variable Bugfix: Fixed recognition of queueing system in configure script

--- a/runxtb.rc
+++ b/runxtb.rc
@@ -12,6 +12,7 @@
 ## Set installation directory (not including the executable).
 #
 #  xtb_install_root="/path/to/xtb"
+   xtb_install_root=""
 #
 ## Set the name of the executable.
 ## (This should be xtb. Set to xtb.dummy for testing.)
