--- a/runxtb.rc
+++ b/runxtb.rc
@@ -1,4 +1,4 @@
-## Example .runxtbrc
+## Example runxtb.rc
 #
 
 ## Set default processes (< number of available cores).
@@ -9,9 +9,11 @@
 #
    requested_memory=1000
 
-## Set installation directory (not including the bin directory and the executable name).
+## Set installation directory.
+#  (Without including the bin directory/ executable name; avoid trailing slashes.)
 #
 #  xtb_install_root="/path/to/xtb/root"
+#  xtb_install_root="~polyluxus/chemsoft/xtb/xtb_6.2.3"
    xtb_install_root=""
 #
 ## Set the name of the executable.
@@ -77,4 +79,4 @@
    requested_walltime="24:00:00"
 
 #
-## End of example .runxtbrc (2019-03-18)
+## End of example runxtb.rc (Martin; 2020-04-09; wrapper version 0.4.0)
