--- a/runxtb.rc
+++ b/runxtb.rc
@@ -95,4 +95,4 @@
    requested_walltime="24:00:00"
 
 #
-## End of example runxtb.rc (Martin; 2024-01-19; wrapper version 0.5.0.ea1)
+## End of example runxtb.rc (Martin; 2024-04-04; wrapper version 0.6.0.rc1)
