Dev lmod support (#36)
Co-authored-by: Ole Osterthun 

* Support Lmod #33 

RWTH switched to a different way of handling modules
Change the way modules are handled, since Lmod supports proper exit codes. 
Therefore use them and get rid of the tmpfile debacle.

* Rework guide for Lmod

Issue #34 asked for support for Lmod.
The reworked guide now explains how to use it. (Hopefully.)

* Testing module script #34

This small script allows to test whether the modules behave like the
script asserts. Mainly that is the correct exit codes when module loading fails.

* Minor Fixes, 
#37 typo in configure
#38 (rm hotfix)
#41 fix xtb link

* Fixes in configure script
Avoid using empty variables in configure
configure did not produce correct warning
moved question to where it belongs #43

* Include deprecation notices for bsub #42

* fix: Allows multithreaded crest #45 and further move quickfix for #45

* there is no need for the srun ommand on a single node; removed it

--- a/runxtb.rc
+++ b/runxtb.rc
@@ -63,7 +63,8 @@
 
 ## Set default queueing system for which the script should be written.
 ## Format <queue>-<special>
-## Recognised values for <queue>: pbs, bsub, slurm
+## Recognised values for <queue>: pbs, slurm, (bsub)
+## Please note that LSF (bsub) is now deprecated and will be removed in a future version.
 ## Recognised values for <special>: gen, rwth (no effect for pbs) [special cases, see source code]
 #
    request_qsys="slurm-gen"
@@ -80,14 +81,19 @@
 #  use_modules="true"
    use_modules="false"
 #
+#  Allow to start fresh by allowing modules to be purged:
+#
+#  purge_modules="true"
+#  purge_modules="false"
+#
 #  They need to be named, too. For example (on CLAIX18):
 #
-#  load_modules[0]="CHEMISTRY"
-#  load_modules[1]="xtb"
+#  load_modules[0]="xtb"
+#  load_modules[1]="CREST"
 
 ## Set Walltime for non-interactive mode
 #
    requested_walltime="24:00:00"
 
 #
-## End of example runxtb.rc (Martin; 2024-01-07; wrapper version 0.5.0)
+## End of example runxtb.rc (Martin; 2024-11-02; wrapper version 0.6.0)
